Fixed catalog stylesheet, verticle aligning text in current_enrollments.

--- a/app/assets/stylesheets/catalog.css.scss
+++ b/app/assets/stylesheets/catalog.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Catalog controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.catalog {
+  .current-enrollments {
+    tbody tr td {
+      vertical-align: middle;
+    }
+  }
+}
